# rust-utf8

./: Cargo.toml  LICENSE-MIT  README.md  based_on_std.rs  build.rs  lib.rs  polyfill.rs
benches/: from_utf8_lossy.rs
src/: lib.rs  lossy.rs  polyfill.rs  read.rs
tests/: decoder.rs  push_lossy_decoder.rs  str_from_utf8.rs  string_from_utf8_lossy.rs  unit.rs
tests/shared/: data.rs  string_from_utf8_lossy.rs
