[package]
name = "utf-8"
version = "0.2.0"
authors = ["Simon Sapin <simon.sapin@exyr.org>"]
description = "Incremental, zero-copy UTF-8 decoding with error handling"
license = "MIT / Apache-2.0"
repository = "https://github.com/SimonSapin/rust-utf8"

[lib]
name = "utf8"
path = "lib.rs"
test = false
bench = false

[dependencies]
matches = "0.1.2"
string-wrapper = "0.1.0"

[profile.test]
opt-level = 3

[profile.bench]
#debug = true
